force-app/main/default/objects/Contact_Address__c/Contact_Address__c.object-meta.xml
<CustomObject>
    <description>Addresses associated with the contact</description>
    <label>Contact Address</label>
    <nameField>
        <label>Contact Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>