force-app/main/default/objects/Contact_Address__c/fields/Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Id__c</fullName>
    <description>Unique identifier for this address in the system of record</description>
    <inlineHelpText>Unique identifier for this address in the system of record</inlineHelpText>
    <label>Address Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>