force-app/main/default/objects/Contact_Address__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Address Line 1</description>
    <inlineHelpText>Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>