force-app/main/default/objects/Contact_Address__c/fields/Admin_Area_1__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_1__c</fullName>
    <description>Admin Area 1</description>
    <inlineHelpText>Admin Area 1</inlineHelpText>
    <label>Admin Area 1</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>