force-app/main/default/objects/Contact_Address__c/fields/Admin_Area_2__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_2__c</fullName>
    <description>Admin Area 2</description>
    <inlineHelpText>Admin Area 2</inlineHelpText>
    <label>Admin Area 2</label>
    <length>120</length>
    <type>Text</type>
</CustomField>