force-app/main/default/objects/Contact_Address__c/fields/Admin_Area_3__c.field-meta.xml
<CustomField>
    <fullName>Admin_Area_3__c</fullName>
    <description>Admin Area 3</description>
    <inlineHelpText>Admin Area 3</inlineHelpText>
    <label>Admin Area 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>