force-app/main/default/objects/Contact_Address__c/fields/Confirmation_Status__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Status__c</fullName>
    <description>Confirmation Status of the address in the profile</description>
    <inlineHelpText>Confirmation Status of the address in the profile</inlineHelpText>
    <label>Confirmation Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>