force-app/main/default/objects/Contact_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to which the address is associated</description>
    <inlineHelpText>Contact to which the address is associated</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Addresses</relationshipLabel>
    <relationshipName>Contact_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>