force-app/main/default/objects/Contact_Address__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the address in the profile</description>
    <inlineHelpText>Status of the address in the profile</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>