force-app/main/default/objects/Contact_Address__c/fields/Tags_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tags_JSON__c</fullName>
    <description>Tags associated with the Address</description>
    <inlineHelpText>Tags associated with the Address</inlineHelpText>
    <label>Tags JSON</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>