force-app/main/default/objects/Contact_Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of address - Home / Work / etc.,</description>
    <inlineHelpText>Type of address - Home / Work / etc.,</inlineHelpText>
    <label>Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>